# PracticeProject4NDK

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/ntanougat/practiceproject4ndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/Test4CPP/: Test.cpp  Test.h
app/src/main/java/com/ntanougat/practiceproject4ndk/: MainActivity.java
app/src/main/java/com/ntanougat/practiceproject4ndk/NDKHelper/: NDKHelper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/ntanougat/practiceproject4ndk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
